website: start migration to TypeScript
Frontend works fine, backend not tested yet.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "license": "MIT",
     "repository": "github:yongrenjie/gennoah",
     "scripts": {
-        "start": "node app.mjs"
+        "start": "node build/app.js"
     }
 }
