website: finalise initial migration to TypeScript
The code needs to be refactored and annotated much more thoroughly, but
it should compile now.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,12 @@
     "outDir": "./build",
     "allowJs": true,
     "target": "es6",
-    "module": "esnext"
+    "module": "esnext",
+    "lib": [
+        "es2019",
+        "dom",
+        "dom.iterable"
+    ]
   },
   "include": ["./src/**/*"]
 }
