--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
         "postinstall": "tsc",
         "test": "tsc; mocha tests/"
     },
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "mocha": "^8.3.1",
+        "typescript": "^4.2.3"
+    }
 }
