--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
         "es2019",
         "dom",
         "dom.iterable"
-    ]
+    ],
+    "strictNullChecks": true
   },
   "include": ["./src/**/*"]
 }
