--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     },
     "type": "module",
     "dependencies": {
-        "mocha": "^8.3.1",
-        "typescript": "^4.2.3"
+        "mocha": "^8.4.0",
+        "typescript": "^4.2.3",
+        "yargs": "^16.2.0",
+        "yargs-parser": "^20.2.4"
     }
 }
