--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     },
     "type": "module",
     "dependencies": {
-        "mocha": "^8.4.0",
+        "ansi-regex": ">=5.0.1",
+        "mocha": "^9.2.0",
+        "nanoid": ">=3.1.31",
         "typescript": "^4.2.3",
         "yargs": "^16.2.0",
-        "yargs-parser": "^20.2.4",
-        "ansi-regex": ">=5.0.1"
+        "yargs-parser": "^20.2.4"
     }
 }
